--- a/sass/style.scss
+++ b/sass/style.scss
@@ -30,6 +30,14 @@ header{
 		h1{
 			font-size: 100px;
 		}
+		@media screen and (max-width: 600px){
+	h1{
+		font-size: 50px;
+	}
+	h3{
+		font-size: 30px;
+	}
+}
 		h1, h3{
 			color: white;
 			text-shadow: 0 0 10px rgba(0,0,0,0.8)
@@ -162,3 +170,4 @@ nav{
 		margin-bottom: 0;
 	}
 }
+
